# tichu

./: Makefile.in  TODO  config.guess  configure  configure.in
.svn/: wc.db
client/: aclocal.m4  build.mk.in  config.h.in  configure  tichu-client.dev  tichu-client.nsi  tichu-client.rc
client/data/: Makefile.in  cards.ini  client.ini
client/help/: Makefile.in
client/images/: Makefile.in
client/libsgui/: ChangeLog  Makefile.in  Makefile.mingw32  TODO  aclocal.m4  config.h.in  configure  configure.in  libsgui.dev
client/libsgui/cursors/: Makefile.in  ghost.cur  nouveau-onyx.cur
client/libsgui/doc/: Doxyfile  Doxyfile.in  Makefile.in  examples.doc  libsgui.doc
client/libsgui/doc/html/: Makefile.in
client/libsgui/doc/man/: Makefile.in
client/libsgui/examples/: example01.c
client/libsgui/fonts/: Makefile.in
client/libsgui/include/libsgui/: adjust.h  button.h  colorsel.h  common.h  dialog.h  file.h  font.h  group.h  history.h  image.h  input.h  list.h  listbox.h  pattern.h  picts.h  sgui.h  stub.h  tab.h  toggle.h
client/libsgui/src/: Makefile.in  adjust.c  button.c  colorsel.c  console.c  dialog.c  dropdown.c  edit.c  file.c  font.c  history.c  image.c  input.c  label.c  list.c  pattern.c  picts.c  sgui.c  tab.c  toggle.c  widget.c
client/libsgui/tools/: Makefile.in  gif2h.c  libsgui-config  libsgui-config.in
client/mixer/: Makefile.in  drv_nos.c  load_xm.c  mdreg.c  mikmod.h  mikmod_internals.h  mixer.c  mlreg.c  mlutil.c  mmalloc.c  mmio.c  mplayer.c  munitrk.c  music.c  sloader.c  virtch.c
client/src/: Makefile.in  action.c  action.h  card.h  client.c  dlink.c  dnd.c  fan.h  game.h  gfxutil.c  gfxutil.h  ini.h  net.c  player.c  player.h  queue.c  queue.h  reply.c  reply.h  sound.c  sound.h  stack.c  stack.h  ui.c  ui.h  ui_chat.c  ui_chat.h  ui_config.c  ui_config.h  ui_config_card.c  ui_config_client.c  ui_config_stack.c  ui_game.c  ui_game.h  ui_help.c  ui_help.h  ui_settings.c  ui_sound.c  ui_sound.h
server/: aclocal.m4  config.mk.in  configure  configure.in
server/bot/: Makefile.in  card.c  card.h  game.c  player.c  player.h  reply.c  reply.h
server/data/: Makefile.in  bot.ini
server/include/tichu/: Makefile.in  card.h  chars.h  class.h  combo.h  conf.h  config.h.in  game.h  player.h  tichu.h
server/libchaos/: Makefile.in  configure.in
server/libchaos/include/: Makefile.in
server/libchaos/include/libchaos/: Makefile.in  child.h  config.h  connect.h  db.h  defs.h  divdi3.h  dlink.h  font_8x13.h  font_8x13b.h  gif.h  graph.h  httpc.h  image_defpal.h  ini.h  io.h  listen.h  module.h  net.h  queue.h  sauth.h  syscall.h  template.h  timer.h  ttf.h
server/libchaos/servauth/: Makefile.in  auth.c  auth.h  cache.c  commands.c  commands.h  dns.c  dns.h  proxy.c  query.c  query.h  servauth.c
server/libchaos/src/: Makefile.in  cfg.c  cfg.pd  child.c  child.pd  connect.c  connect.pd  db.c  db.pd  divdi3.c  divdi3.pd  dlfcn_darwin.c  dlink.c  dlink.pd  filter.pd  gif.c  gif.pd  graph.c  graph.pd  hook.c  hook.pd  htmlp.pd  httpc.c  httpc.pd  image.c  image.pd  ini.c  ini.pd  io.c  io.pd  listen.c  listen.pd  log.c  log.pd  mem.c  mem.pd  mfile.c  mfile.pd  module.pd  net.pd  (+13 more)
server/libchaos/test/: Makefile.in  cfgtest.c  dbtest.c  giftest.c  graphtest.c  imagetest.c  ttftest.c  wavtest.c
server/modules/msg/: m_abandon.c  m_accept.c  m_ban.c  m_cards.c  m_create.c  m_dump.c  m_games.c  m_help.c  m_join.c  m_logout.c  m_msg.c  m_order.c  m_playcards.c  m_players.c  m_schupfe.c  m_start.c  m_team.c  m_tichu.c
server/src/: Makefile.in  chars.c  combo.c  game.c  msg.c  player.c  structs.c  tichu.c
