# $Id: configure.in,v 1.17 2005/05/10 00:29:16 smoli Exp $
# ===========================================================================
#
# GNU autoconf template for tichu
#
# initialize autoconf (require version 2.5x)
# ---------------------------------------------------------------------------
AC_PREREQ(2.50)
AC_INIT([tichu],[0.10])

# check for compiling modes
# ---------------------------------------------------------------------------
AC_CHECK_COLOR

# set package info
# ---------------------------------------------------------------------------
CREATION=$(date)
PLATFORM=$(uname -a)
RELEASE="w00p, tichu :D"

AC_SET_ARGS

AC_DEFINE_UNQUOTED(CREATION, "$CREATION", [Creation time of this server])
AC_DEFINE_UNQUOTED(PLATFORM, "$PLATFORM", [Platform this server runs on])
AC_DEFINE_UNQUOTED(PACKAGE_RELEASE, "$RELEASE", [Define to the release name of this package.])

# set directories
# ---------------------------------------------------------------------------
AC_CONFIG_SUBDIRS(server client)
AC_PREFIX_DEFAULT(/usr/tichu)
SUBDIRS=""

# set warning and debugging flags
# ---------------------------------------------------------------------------
DFLAGS="-g -ggdb"
WFLAGS="-Wall"

# check whether to build the server
# ---------------------------------------------------------------------------
ac_cv_server="yes"
AC_MSG_CHECKING(whether to build server)
AC_ARG_ENABLE(server, 
[  --enable-server          build server (default)
  --disable-server         don not build server],
[
  case "$enableval" in
    yes)
      ac_cv_server="yes"
      ;;
    no)
      ac_cv_server="no"
      ;;
    esac
])
AC_MSG_RESULT($ac_cv_server)                                    

if test "$ac_cv_server" = "yes"
then
  SUBDIRS="$SUBDIRS server"
  SERVER="server"
fi

AC_SUBST(SERVER)

# check whether to build the client
# ---------------------------------------------------------------------------
ac_cv_client="yes"
AC_MSG_CHECKING(whether to build client)
AC_ARG_ENABLE(client, 
[  --enable-client          build client (default)
  --disable-client         don not build client],
[
  case "$enableval" in
    yes)
      ac_cv_client="yes"
      ;;
    no)
      ac_cv_client="no"
      ;;
    esac
])
AC_MSG_RESULT($ac_cv_client)                                    

if test "$ac_cv_client" = "yes"
then
  SUBDIRS="$SUBDIRS client"
  CLIENT="client"
fi

AC_SUBST(CLIENT)

AC_CANONICAL_HOST
AC_CANONICAL_BUILD

AC_CONFIG_DYLIB

# set debugging stuff after compiler test (-Werror could fuck it up)
# ---------------------------------------------------------------------------
AC_CHECK_DEP
AC_CHECK_DEBUG
AC_CHECK_MAINTAINER

# substitute and output 
# ---------------------------------------------------------------------------
AC_SUBST(SUBDIRS)
AC_SUBST(ac_configure_args)

AC_CONFIG_FILES([config.mk build.mk Makefile])
AC_OUTPUT

echo
echo "$PACKAGE_NAME has been configured with the following options:"
echo
echo "      Build server: $ac_cv_server"
echo "      Build client: $ac_cv_client"
echo
